add dummy sections for the details of the low-scale constraint

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -444,6 +444,14 @@ model:
   reference EWSB or merge that section here.  mention two loop qcd
   parts from softsusy.}
 
+\subsubsection{Calculation of the gauge couplings $g_i(M_Z)$}
+
+{\color{red} copy gauge couplings section from the manual.}
+
+\subsubsection{Calculation of the Yukawa couplings $y_f(M_Z)$}
+
+{\color{red} copy Yukawa couplings section from the manual.}
+
 \subsubsection{Electroweak symmetry breaking}
 In \fs the one-loop electroweak symmetry breaking conditions are
 formulated as
