--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+FlexibleSUSY-0.5.4 [not released yet]
+
+ * Bugfix (commit 399a1c8): renaming SoftsusyMSSM and SoftsusyNMSSM
+   model classes and files to make `make all-test' work on HFS (fixes
+   #2).
+
+ * Bugfix (commit cfc2562): correcting MS-bar to DR-bar conversion of
+   fermion masses mb and mtau.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
