--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -43,3 +43,40 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = HEP-PH/0210258;%%",
 }
+
+@article{Skands:2003cj,
+      author         = "Skands, Peter Z. and Allanach, B.C. and Baer, H. and
+                        Balazs, C. and Belanger, G. and others",
+      title          = "{SUSY Les Houches accord: Interfacing SUSY spectrum
+                        calculators, decay packages, and event generators}",
+      journal        = "JHEP",
+      volume         = "0407",
+      pages          = "036",
+      doi            = "10.1088/1126-6708/2004/07/036",
+      year           = "2004",
+      eprint         = "hep-ph/0311123",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LU-TP-03-39, SHEP-03-24, CERN-TH-2003-204, ZU-TH-15-03,
+                        LMU-19-03, DCPT-03-108, IPPP-03-54, CTS-IISC-2003-07,
+                        DESY-03-166, MPP-2003-111",
+      SLACcitation   = "%%CITATION = HEP-PH/0311123;%%",
+}
+
+@article{Allanach:2008qq,
+      author         = "Allanach, B.C. and Balazs, C. and Belanger, G. and
+                        Bernhardt, M. and Boudjema, F. and others",
+      title          = "{SUSY Les Houches Accord 2}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "180",
+      pages          = "8-25",
+      doi            = "10.1016/j.cpc.2008.08.004",
+      year           = "2009",
+      eprint         = "0801.0045",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-07-036-T, SLAC-PUB-12765,
+                        CERN-PH-TH-2007-148, DAMTP-2007-76, EDINBURGH-2007-31,
+                        KEK-TH-1170, LAPTH-1204-07, LPT-ORSAY-07-81, SHEP-07-13",
+      SLACcitation   = "%%CITATION = ARXIV:0801.0045;%%",
+}
