--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -32,9 +32,13 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\ESSM}{E$_6$SSM\xspace}
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
-\newcommand{\DRbar}{\textoverline{DR}}  % inline source code
+\newcommand{\DRbar}{\textoverline{DR}\xspace}
+\newcommand{\MSbar}{\textoverline{MS}\xspace}
 \newcommand{\unit}[1]{\,\text{#1}}      % units
+\newcommand{\userinput}{\text{<input>}}
 \DeclareMathOperator{\sign}{sign}
+\DeclareMathOperator{\re}{Re}
+\DeclareMathOperator{\im}{Im}
 \def\at{\alpha_t}
 \def\ab{\alpha_b}
 \def\as{\alpha_s}
@@ -446,11 +450,191 @@ model:
 
 \subsubsection{Calculation of the gauge couplings $g_i(M_Z)$}
 
-{\color{red} copy gauge couplings section from the manual.}
+The low-scale constraint calculates the gauge couplings $g_i(M_Z)$.
+It does so by first calculating $e_{\text{susy}}^{\text{\DRbar}}(M_Z)$
+and $g_{3,\text{susy}}^{\text{\DRbar}}(M_Z)$ via
+%
+\begin{align}
+  \alpha_{\text{e.m.},\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \frac{\alpha_{\text{e.m.},\text{SM}}^{(5),\text{\MSbar}}(M_Z)}{1 -
+    \Delta\alpha_{\text{e.m.},\text{SM}}(M_Z) -
+    \Delta\alpha_{\text{e.m.},\text{susy}}(M_Z)} ,\\
+  \Delta\alpha_{\text{e.m.},\text{SM}}(\mu) &=
+  \frac{\alpha_\text{e.m.}}{2\pi} \left[\frac{1}{3}
+    - \frac{16}{9} \log{\frac{m_t}{\mu}} \right],\\
+  \Delta\alpha_{\text{e.m.},\text{susy}}(\mu) &=
+  \frac{\alpha_\text{e.m.}}{2\pi} \left[ -\sum_{\text{susy particle }
+      i}
+    C_i \log{\frac{m_i}{\mu}} \right],\\
+    e_{\text{susy}}^{\text{\DRbar}}(M_Z) &=
+    \sqrt{4\pi\alpha_{\text{e.m.},\text{susy}}^{\text{\DRbar}}(M_Z)}
+\end{align}
+%
+\begin{align}
+  \alpha_{\text{s},\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \frac{\alpha_{\text{s},\text{SM}}^{(5),\text{\MSbar}}(M_Z)}{1 -
+    \Delta\alpha_{\text{s},\text{SM}}(M_Z)
+    - \Delta\alpha_{\text{s},\text{susy}}(M_Z)} ,\\
+  \Delta\alpha_{\text{s},\text{SM}}(\mu) &=
+  \frac{\alpha_\text{s}}{2\pi} \left[
+    -\frac{2}{3} \log{\frac{m_t}{\mu}} \right],\\
+  \Delta\alpha_{\text{s},\text{susy}}(\mu) &=
+  \frac{\alpha_\text{s}}{2\pi}\left[ \frac{1}{2}-\sum_{\text{susy
+        particle } i} C_i \log{\frac{m_i}{\mu}} \right] ,\\
+  g_{3,\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \sqrt{4\pi\alpha_{\text{s},\text{susy}}^{\text{\DRbar}}(M_Z)} ,
+\end{align}
+%
+where
+%
+\begin{align}
+  \alpha_{\text{e.m.},\text{SM}}^{(5),\text{\MSbar}}(M_Z) &= 1/127.944,\\
+  \alpha_{\text{s},\text{SM}}^{(5),\text{\MSbar}}(M_Z) &= 0.1185,
+\end{align}
+%
+are the \MSbar electromagnetic and strong cougling constants in the
+Standard Model including only $5$ quark flavours
+\cite{Beringer:1900zz}.  Afterwards, SARAH's tree-level expressions
+for the Weinberg angle and the $U(1)_Y$ and $SU(2)_L$ gauge couplings
+$g_Y$ and $g_2$ in terms of $M_{W,\text{susy}}^{\text{\DRbar}}(M_Z)$,
+$M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)$ and
+$e_{\text{susy}}^{\text{\DRbar}}(M_Z)$ are used to calculate
+$g_{1,\text{susy}}^{\text{\DRbar}}(M_Z)$ and
+$g_{2,\text{susy}}^{\text{\DRbar}}(M_Z)$.  In the MSSM, for example,
+one has
+%
+\begin{align}
+  \theta_{W,\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \arcsin\sqrt{1 - \left(\frac{M_{W,\text{susy}}^{\text{\DRbar}}(M_Z)}{M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)}\right)^2} ,\\
+  g_{1,\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \sqrt{\frac{5}{3}} \frac{e_{\text{susy}}^{\text{\DRbar}}(M_Z)}{\cos\theta_{W,\text{susy}}^{\text{\DRbar}}(M_Z)} ,\\
+  g_{2,\text{susy}}^{\text{\DRbar}}(M_Z) &=
+  \frac{e_{\text{susy}}^{\text{\DRbar}}(M_Z)}{\sin\theta_{W,\text{susy}}^{\text{\DRbar}}(M_Z)} ,
+\end{align}
+%
+where
+%
+\begin{align}
+  \left(M_{W,\text{susy}}^{\text{\DRbar}}(M_Z)\right)^2 &=
+  \left(M_W^{\text{pole}}\right)^2 + \re \Pi_{WW}^T(p^2 = (M_W^{\text{pole}})^2) ,\\
+  \left(M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)\right)^2 &=
+  \left(M_Z^{\text{pole}}\right)^2 + \re \Pi_{ZZ}^T(p^2 = (M_Z^{\text{pole}})^2)
+\end{align}
+%
+and $M_W^{\text{pole}} = 80.404\unit{GeV}$, $M_Z^{\text{pole}} =
+91.1876\unit{GeV}$ \cite{Beringer:1900zz}.
 
 \subsubsection{Calculation of the Yukawa couplings $y_f(M_Z)$}
 
-{\color{red} copy Yukawa couplings section from the manual.}
+At the low-scale constraint the expressions for the Yukawa coupling
+matrices $y_f(M_Z)$ are calculated from the tree-level mass matrices
+of the SM-fermions $m_u$, $m_d$, $m_e$.  In the MSSM, for example,
+these relations read
+%
+\begin{align}
+  y_u^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{u}^T}{v_u} , &
+  y_d^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{d}^T}{v_d} , &
+  y_e^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{e}^T}{v_d}.
+\end{align}
+%
+At the low-scale the fermion mass matrices are composed as
+%
+\begin{align}
+  m_u =
+  \begin{pmatrix}
+    m_{u}^{\userinput} & 0 & 0 \\
+    0 & m_{c}^{\userinput} & 0 \\
+    0 & 0 & m_{t,\text{susy}}^{\text{\DRbar}}(M_Z)
+  \end{pmatrix} ,\\
+  m_d =
+  \begin{pmatrix}
+    m_{d}^{\userinput} & 0 & 0 \\
+    0 & m_{s}^{\userinput} & 0 \\
+    0 & 0 & m_{b,\text{susy}}^{\text{\DRbar}}(M_Z)
+  \end{pmatrix} ,\\
+  m_e =
+  \begin{pmatrix}
+    m_{e}^{\userinput} & 0 & \\
+    0 & m_{\mu}^{\userinput} & 0 \\
+    0 & 0 & m_{\tau,\text{susy}}^{\text{\DRbar}}(M_Z)
+  \end{pmatrix},
+\end{align}
+%
+where $m_{u,c,d,s,e,\mu}^{\userinput}$ are read from the \code{Block
+  SMINPUTS} of the SLHA input file \cite{Skands:2003cj}.  The 3rd
+generation quark masses are calculated in the \DRbar scheme from the
+SLHA user input quantities $m_t^\text{pole}$,
+$m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$,
+$m_{\tau,\text{SM}}^{\text{\MSbar}}(M_Z)$ \cite{Skands:2003cj}.  In
+detail, the top quark \DRbar mass is calculated via
+%
+\begin{align}
+  \begin{split}
+    m_{t,\text{susy}}^{\text{\DRbar}}(\mu) &= m_t^\text{pole} +
+    \re\Sigma_{tt}^{S,\text{heavy}}(m_t^\text{pole}) \\
+    &\phantom{=\;} + m_t^\text{pole}
+    \left[ \re\Sigma_{tt}^{L,\text{heavy}}(m_t^\text{pole}) +
+      \re\Sigma_{tt}^{R,\text{heavy}}(m_t^\text{pole}) + \Delta
+      m_t^{(1),\text{qcd}} + \Delta m_t^{(2),\text{qcd}} \right] ,
+  \end{split}
+\end{align}
+%
+where the $\Sigma_{ff}^\text{heavy}$ denotes the self-energy of
+fermion $f$ without the Standard Model contributions.  The appearing
+QCD corrections $\Delta m_t^{(1),\text{qcd}}$ and $\Delta
+m_t^{(2),\text{qcd}}$ are taken from
+\cite[Eq.\ (58),(61)]{Bednyakov:2002sf} and read
+%
+\begin{align}
+  \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2 \left(5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right)}{12 \pi^2},\\
+  \begin{split}
+    \Delta m_t^{(2),\text{qcd}} &= \left(\Delta
+      m_t^{(1),\text{qcd}}\right)^2 \\
+    &\phantom{=\;} - \frac{g_3^4 \left[396
+        \log^2\left(\frac{m_t^2}{\mu^2}\right)-1476
+        \log\left(\frac{m_t^2}{\mu^2}\right)-48 \zeta(3)+2011+16 \pi
+        ^2 (1+\log 4)\right]}{4608 \pi^4}.
+  \end{split}
+\end{align}
+%
+The \DRbar mass of the bottom quark is calculated via
+\cite{Baer:2002ek,Skands:2003cj}
+%
+\begin{align}
+  m_{b,\text{susy}}^{\text{\DRbar}}(\mu) &=
+  \frac{m_{b,\text{SM}}^{\text{\DRbar}}(\mu)}{1 -
+    \re\Sigma_{bb}^{S,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})/m_b
+    - \re\Sigma_{bb}^{L,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar}) -
+    \re\Sigma_{bb}^{R,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})} ,\\
+  m_{b,\text{SM}}^{\text{\DRbar}}(\mu) &=
+  m_{b,\text{SM}}^{\text{\MSbar}}(\mu) \left(1 - \frac{\alpha_s}{3
+      \pi} - \frac{23}{72} \frac{\alpha_s^2}{\pi^2} + \frac{3
+      g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) ,
+\end{align}
+%
+where $m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$ is user input.  The
+\DRbar mass of the $\tau$ is calculated via
+%
+\begin{align}
+  \begin{split}
+    m_{\tau,\text{susy}}^{\text{\DRbar}}(\mu) &=
+    m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) +
+    \re\Sigma_{\tau\tau}^{S,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar}) \\
+    &\phantom{=\;} + m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) \left[
+      \re\Sigma_{\tau\tau}^{L,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
+      +
+      \re\Sigma_{\tau\tau}^{R,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
+    \right] ,
+  \end{split}\\
+  m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) &= m_{\tau,\text{SM}}^{\text{\MSbar}}(\mu)
+  \left(1 - 3 \frac{g_Y^2 - g_2^2}{128 \pi^2}\right),
+\end{align}
+%
+where $m_{\tau,\text{SM}}^{\text{\MSbar}}(M_Z)$ is user input.  To
+convert the fermion masses from the \MSbar to the \DRbar scheme the
+Yukawa coupling conversion from \cite[Eq.~(19)]{Skands:2003cj} was
+used and it was assumed that the VEV is already given in the \DRbar
+scheme.
 
 \subsubsection{Electroweak symmetry breaking}
 In \fs the one-loop electroweak symmetry breaking conditions are
@@ -1308,6 +1492,16 @@ Comparisons against existing spectrum generators and SARAH generated spheno code
   [arXiv:0907.4682 [hep-ph]].
   %%CITATION = ARXIV:0907.4682;%%
   %35 citations counted in INSPIRE as of 21 Sep 2013
+
+%\cite{Skands:2003cj}
+\bibitem{Skands:2003cj}
+  P.~Z.~Skands, B.~C.~Allanach, H.~Baer, C.~Balazs, G.~Belanger, F.~Boudjema, A.~Djouadi and R.~Godbole {\it et al.},
+  %``SUSY Les Houches accord: Interfacing SUSY spectrum calculators, decay packages, and event generators,''
+  JHEP {\bf 0407} (2004) 036
+  [hep-ph/0311123].
+  %%CITATION = HEP-PH/0311123;%%
+  %394 citations counted in INSPIRE as of 22 Feb 2014
+
 %\cite{Allanach:2008qq}
 \bibitem{Allanach:2008qq} 
   B.~C.~Allanach, C.~Balazs, G.~Belanger, M.~Bernhardt, F.~Boudjema, D.~Choudhury, K.~Desch and U.~Ellwanger {\it et al.},
@@ -1444,7 +1638,31 @@ Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}
   %%CITATION = HEP-PH/0510419;%%
   %130 citations counted in INSPIRE as of 03 Nov 2013
 
-%
+%\cite{Beringer:1900zz}
+\bibitem{Beringer:1900zz}
+  J.~Beringer {\it et al.}  [Particle Data Group Collaboration],
+  %``Review of Particle Physics (RPP),''
+  Phys.\ Rev.\ D {\bf 86} (2012) 010001.
+  %%CITATION = PHRVA,D86,010001;%%
+  %3229 citations counted in INSPIRE as of 22 Feb 2014
+
+%\cite{Bednyakov:2002sf}
+\bibitem{Bednyakov:2002sf}
+  A.~Bednyakov, A.~Onishchenko, V.~Velizhanin and O.~Veretin,
+  %``Two loop O(alpha-s**2) MSSM corrections to the pole masses of heavy quarks,''
+  Eur.\ Phys.\ J.\ C {\bf 29} (2003) 87
+  [hep-ph/0210258].
+  %%CITATION = HEP-PH/0210258;%%
+  %35 citations counted in INSPIRE as of 22 Feb 2014
+
+%\cite{Baer:2002ek}
+\bibitem{Baer:2002ek}
+  H.~Baer, J.~Ferrandis, K.~Melnikov and X.~Tata,
+  %``Relating bottom quark mass in DR-BAR and MS-BAR regularization schemes,''
+  Phys.\ Rev.\ D {\bf 66} (2002) 074007
+  [hep-ph/0207126].
+  %%CITATION = HEP-PH/0207126;%%
+  %55 citations counted in INSPIRE as of 22 Feb 2014
 
 \end{thebibliography}
 \end{document}
