--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -36,6 +36,7 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\MSbar}{\textoverline{MS}\xspace}
 \newcommand{\unit}[1]{\,\text{#1}}      % units
 \newcommand{\userinput}{\text{<input>}}
+\newcommand{\pole}{\text{pole}}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\re}{Re}
 \DeclareMathOperator{\im}{Im}
@@ -336,6 +337,141 @@ Run the spectrum generator using a SLHA input file
 $ ./models/MSSM/run_MSSM.x --slha-input-file=templates/MSSM/LesHouches.in.MSSM --slha-output-file=LesHouches.out.MSSM
   \end{lstlisting}%% $
 
+\section{Setting up a FlexibleSUSY model}
+
+A \fs model is configured via a (Mathematica) model file, which in
+case of the MSSM looks like this
+%
+\begin{lstlisting}[language=Mathematica]
+FSModelName = "MSSM";
+
+MINPAR = {
+   {1, m0},
+   {2, m12},
+   {3, TanBeta},
+   {4, Sign[\[Mu]]},
+   {5, Azero}
+};
+
+DefaultParameterPoint = {
+   {m0, 125},
+   {m12, 500},
+   {TanBeta, 10},
+   {Sign[\[Mu]], 1},
+   {Azero, 0}
+};
+
+EWSBOutputParameters = { B[\[Mu]], \[Mu] };
+
+HighScale = g1 == g2;
+
+HighScaleFirstGuess = 1.0 10^14;
+
+HighScaleInput = {
+   {T[Ye], Azero*Ye},
+   {T[Yd], Azero*Yd},
+   {T[Yu], Azero*Yu},
+   {mHd2, m0^2},
+   {mHu2, m0^2},
+   {mq2, UNITMATRIX[3] m0^2},
+   {ml2, UNITMATRIX[3] m0^2},
+   {md2, UNITMATRIX[3] m0^2},
+   {mu2, UNITMATRIX[3] m0^2},
+   {me2, UNITMATRIX[3] m0^2},
+   {MassB, m12},
+   {MassWB, m12},
+   {MassG, m12}
+};
+
+SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+
+SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
+
+SUSYScaleInput = {};
+
+LowScale = SM[MZ];
+
+LowScaleFirstGuess = SM[MZ];
+
+LowScaleInput = {
+   {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
+   {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
+};
+
+InitialGuessAtLowScale = {
+   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
+   {vu, SM[vev] Sin[ArcTan[TanBeta]]}
+};
+
+InitialGuessAtHighScale = {
+   {\[Mu]   , 1.0},
+   {B[\[Mu]], 0.0}
+};
+
+OnlyLowEnergyFlexibleSUSY = False; (* default *)
+\end{lstlisting}
+%
+The variable \code{FSModelName} contains the name of the \fs model.
+
+All non-Standard Model input variables must be specified in the lists
+\code{MINPAR} and \code{EXTPAR}.  Theses two variables refer to the
+MINPAR and EXTPAR blocks in a SLHA input file \cite{Skands:2003cj}.
+The list elements are two-component lists where the first entry is the
+SLHA index in the MINPAR or EXTPAR blocks.  The second entry is the
+name of the parameter.  The input parameters can be set to default
+values in the \code{DefaultParameterPoint} list, see above.
+
+Using the the variable \code{EWSBOutputParameters} the user can
+specify the model parameters that are output of the electroweak
+symmetry breaking conditions.  When doing EWSB, \fs will adjust these
+parameters until the EWSB conditons are fulfilled.  In the CMSSM these
+are \code{Mu} and \code{B[\[Mu]]}.
+
+Furthermore, the user has to specify the form of three model
+constraints: low-scale, susy-scale and high-scale constraints.  In \fs
+they are named as \code{LowScale}, \code{SUSYScale} and
+\code{HighScale}.  For each constraint there is a scale definition
+(named after the constraint), an initial guess for the scale
+(concatenation of the constraint name and \code{FirstGuess}) and a
+list of settings to be applied at the constraint (concatenation of the
+constraint name and \code{Input}).
+%
+\begin{itemize}
+\item \emph{High-scale constraint:} The high-scale constraint is
+  usuall the GUT-scale constraint, applied at the scale where the
+  gauge couplings $g_1$ and $g_2$ unify.  The high-scale can be
+  defined by an equation of the form \code{g1 == g2} or by fixed scale
+  value.
+\item \emph{Susy-scale constraint:} The susy-scale constraint is the
+  constraint where \fs will impose the EWSB conditions and calculate
+  the spectrum.  It is usually defined by
+  $\sqrt{m_{\tilde{t}_1}m_{\tilde{t}_2}}$.
+\item \emph{Low-scale constraint:} The low-scale constraint is the
+  constraint where the gauge couplings $g_1$, $g_2$, $g_3$ and the
+  Yukawa couplings $y_f$ will be calculated from given Standard Model
+  input $\alpha_{\text{e.m.}}(M_Z)$, $\alpha_{s}(M_Z)$, $m_f^\pole$,
+  $M_Z^\pole$, $M_W^\pole$, see
+  Sec.~\ref{sec:calculation-of-gauge-couplings}--\ref{sec:calculation-of-yukawa-couplings}.
+  This should be done at the $Z$ mass scale $M_Z$.  Note that the
+  gauge and Yukawa couplings are calculated automatically and
+  therefore do not need to be specified in the \code{LowScaleInput}
+  variable.
+\end{itemize}
+
+Finally the user can set an initial guess for the model parameters at
+the low- and high-scale using the variables
+\code{InitialGuessAtLowScale} and \code{InitialGuessAtHighScale},
+respectively.  Note, that the gauge and Yukawa couplings will be
+guessed automatically at the low-scale from the known Standard Model
+parameters.
+
+To create a low-energy model one has to set
+\code{OnlyLowEnergyFlexibleSUSY = True}.  In this case the high-scale
+constraint will be ignored and only the low-scale and susy-scale
+constraints are kept.  All model parameters that are not specified in
+\code{MINPAR} or \code{EXTPAR} will be read from the corresponding
+input blocks in the SLHA input file and will be set at the susy-scale.
+
 \section{Stucture of the spectrum generator}
 
 \subsection{Model parameters and RGEs}
@@ -449,6 +585,7 @@ model:
   parts from softsusy.}
 
 \subsubsection{Calculation of the gauge couplings $g_i(M_Z)$}
+\label{sec:calculation-of-gauge-couplings}
 
 The low-scale constraint calculates the gauge couplings $g_i(M_Z)$.
 It does so by first calculating $e_{\text{susy}}^{\text{\DRbar}}(M_Z)$
@@ -525,6 +662,7 @@ and $M_W^{\text{pole}} = 80.404\unit{GeV}$, $M_Z^{\text{pole}} =
 91.1876\unit{GeV}$ \cite{Beringer:1900zz}.
 
 \subsubsection{Calculation of the Yukawa couplings $y_f(M_Z)$}
+\label{sec:calculation-of-yukawa-couplings}
 
 At the low-scale constraint the expressions for the Yukawa coupling
 matrices $y_f(M_Z)$ are calculated from the tree-level mass matrices
