Fixing a typo in convention of symmetric diagonalization

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -910,7 +910,7 @@ as
   &= - \frac{1}{2} \psi^T Y \psi + \text{h.c.}
   = - \frac{1}{2} \chi^T Y_D \chi + \text{h.c.}, \\
   \qquad Y &= Y^T ,
-  \qquad Y_D = Z Y Z^\dagger ,
+  \qquad Y_D = Z^* Y Z^\dagger ,
   \qquad \chi = Z \psi ,
   \qquad Z^\dagger Z = 1 ,
 \end{align}
