--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -38,6 +38,7 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\userinput}{\text{<input>}}
 \newcommand{\pole}{\text{pole}}
 \newcommand{\Lagr}{\mathcal{L}}
+\newcommand{\unity}{\mathbf{1}}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\re}{Re}
 \DeclareMathOperator{\im}{Im}
@@ -823,7 +824,6 @@ int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params, gsl_ve
       model->calculate_DRbar_parameters();
       tadpole[0] -= Re(model->tadpole_hh(0));
       tadpole[1] -= Re(model->tadpole_hh(1));
-
    }
 
    for (std::size_t i = 0; i < number_of_ewsb_equations; ++i)
@@ -887,7 +887,7 @@ with an orthogonal matrix $O$ via
   \qquad M^2 &= (M^2)^T ,
   \qquad \phi^m = O \phi ,
   \qquad M^2_D = O M^2 O^T ,
-  \qquad O^T O = 1 ,
+  \qquad O^T O = \unity ,
 \end{align}
 %
 where $M^2_D$ is diagonal and $\phi^m_i$ are the mass eigenstates.  In
@@ -900,7 +900,7 @@ case of complex scalar fields $\phi_i$ we use
   \qquad M^2 &= (M^2)^\dagger ,
   \qquad \phi^m = U \phi ,
   \qquad M^2_D = U M^2 U^\dagger ,
-  \qquad U^\dagger U = 1 .
+  \qquad U^\dagger U = \unity .
 \end{align}
 %
 A (possibly complex) symmetric mass matrix $Y$ for Weyl spinors
@@ -913,7 +913,7 @@ $\psi_i$ is diagonalized as
   \qquad Y &= Y^T ,
   \qquad Y_D = Z^* Y Z^\dagger ,
   \qquad \chi = Z \psi ,
-  \qquad Z^\dagger Z = 1 ,
+  \qquad Z^\dagger Z = \unity ,
 \end{align}
 %
 where $Y_D$ is diagonal and $\chi_i$ are the mass eigenstates.  The
@@ -928,7 +928,7 @@ we use
   \qquad \chi^+ &= V \psi^+ ,
   \qquad \chi^- = U \psi^- ,
   \qquad X_D = U^* X V^{-1} ,
-  \qquad U^\dagger U = 1 = V^\dagger V ,
+  \qquad U^\dagger U = \unity = V^\dagger V ,
 \end{align}
 %
 where we're again chosing the phases of $U$ and $V$ such that all mass
@@ -1085,13 +1085,80 @@ boundary conditions are known at any scale between \code{LowScale} and
 
 The physical (pole) mass spectrum can now be calculated.  \fs uses the
 full one-loop self-energies and tree-level mass matrices to calculate
-the pole masses at the one-loop level.  If higher accuracy is required
-additional routines with higher order corrections can be added in a
-very simple way. For example in the MSSM by default \fs adds two-loop
-Higgs FORTRAN routines supplied by P.~Slavich from
-\cite{slavich-degrassi} to add two loop corrections of $\oatas$,
-$\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and $\oatab$ as
-follows... {\color{red} This is not yet implemented!}
+the pole masses at the one-loop level, which means finding the
+eigenvalues $p$ that solve the following equations:
+%
+\begin{align}
+  &\text{scalars } \phi:  & 0 &= p^2\unity - m^2_{\phi,1L}(p^2), \\
+  &\text{fermions } \xi: & 0 &= p\unity - m_{\xi,1L}(p^2),
+\end{align}
+%
+where the one-loop mass matrices are given by
+%
+\begin{align}
+  &\text{scalars } \phi: &
+  m^2_{\phi,1L}(p^2) &= m^2_{\phi} - \Sigma_\phi(p^2), \\
+  &\text{majorana fermions } \chi: &
+  m_{\chi,1L}(p^2) &= m_{\chi} - \frac{1}{2}\Big[
+    \Sigma_\chi^S(p^2) + \Sigma_\chi^{S,T}(p^2)
+    + \Big( \Sigma_\chi^{L,T}(p^2) + \Sigma_\chi^R(p^2) \Big) m_{\chi} \notag \\
+    &&&\phantom{= m_{\chi} - \frac{1}{2}\Big[}
+    + m_{\chi} \Big( \Sigma_\chi^L(p^2) + \Sigma_\chi^{R,T}(p^2) \Big)
+  \Big], \\
+  &\text{dirac fermions } \psi: &
+  m_{\psi,1L}(p^2) &= m_{\psi}
+  - \Sigma_\psi^S(p^2)
+  - \Sigma_\psi^R(p^2) m_{\psi}
+  - m_{\psi} \Sigma_\psi^L(p^2) .
+\end{align}
+%
+Since the one-loop mass matrices depend on $p$, an iterative procedure
+must be used.  \fs provides three different methods with different
+precision and execution speed to determine the mass eigenvalues:
+
+\code{LowDiagonalizationPrecision}: This option provides the lowest
+precision but is also the fastest one.  Here the one-loop mass matrix
+$m_{\phi,1L,\text{low}}$ is calculated exactly once as
+%
+\begin{align}
+  (m_{\phi,1L,\text{low}})_{ij} = (m_{\phi,1L}(p^2 = m_{\phi_i} m_{\phi_j}))_{ij} ,
+\end{align}
+%
+where $m_{\phi_i}$ is the $i$th mass eigenvalue of the tree-level mass
+matrix $m_\phi$.  Afterwards $m_{\phi,1L,\text{low}}$ is diagonalized
+and the eigenvalues are interpreted as pole masses $m_{\phi_i}^\pole$.
+
+\code{MediumDiagonalizationPrecision} (default): This option provides
+calculation with medium precision with a medium execution time.  Here
+the one-loop mass matrix $m_{\phi,1L,\text{medium}}$ is calculated $n$
+times as
+%
+\begin{align}
+  (m_{\phi,1L,\text{medium}})_{ij}^{(k)} = (m_{\phi,1L}(p^2 = m_{\phi_k}^2))_{ij} ,
+  \qquad k = 1,\ldots,n ,
+\end{align}
+%
+where $m_{\phi_k}$ is the $k$th mass eigenvalue of the tree-level mass
+matrix $m_\phi$.  Afterwards, each mass matrix
+$(m_{\phi,1L,\text{medium}})^{(k)}$ is diagonalized and the $k$th
+eigenvalue is interpreted as pole mass $m_{\phi_k}^\pole$.
+
+\code{HighDiagonalizationPrecision}: This option provides
+diagonalization with highest precision but has also the highest
+execution time.  Here the one-loop mass matrix
+$m_{\phi,1L,\text{high}}$ is diagonalized $n$ times as in the case of
+\code{MediumDiagonalizationPrecision}, resulting in $n$ pole masses
+$m_{\phi_k}^\pole$ ($k = 1,\ldots,n$).  Afterwards, the
+diagonalization is repeated, this time using the so calculated pole
+masses $m_{\phi_k}^\pole$ for the momentum calculation $p^2 =
+(m_{\phi_k}^\pole)^2$, until convergence is reached.
+
+If higher accuracy is required additional routines with higher order
+corrections can be added in a very simple way. For example in the MSSM
+by default \fs adds two-loop Higgs FORTRAN routines supplied by
+P.~Slavich from \cite{slavich-degrassi} to add two loop corrections of
+$\oatas$, $\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and
+$\oatab$ as follows... {\color{red} This is not yet implemented!}
 
 Something similar is done for the NMSSM, but in this case the NMSSM
 $\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}, while for
