--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Bugfix (commit ceecc4a): fixing compilation error with Intel icpc
    14.0, Build 20130728 (and GNU STL 4.6.4 and 4.8.1).
 
- * Add a stand-alone example to illustrate how to use FlexibleSUSY's
+ * Add a stand-alone examples to illustrate how to use FlexibleSUSY's
    classes and libraries independently of FlexibleSUSY's build system.
 
 FlexibleSUSY-0.5.3 [January, 21 2014]
