--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,9 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Add stand-alone examples to illustrate how to use FlexibleSUSY's
    classes and libraries independently of FlexibleSUSY's build system.
 
+ * Allow two-loop tadpole and CP-even Higgs self-energy contributions
+   in the MSSM.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
