--- a/ChangeLog
+++ b/ChangeLog
@@ -19,8 +19,11 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Add stand-alone examples to illustrate how to use FlexibleSUSY's
    classes and libraries independently of FlexibleSUSY's build system.
 
- * Implement two-loop MSSM tadpole and CP-even Higgs self-energy
-   contributions from Slavich.
+ * Implement leading two-loop MSSM tadpoles from Slavich (used in the
+   EWSB conditions).
+
+ * Implement leading two-loop MSSM CP-even and CP-odd Higgs
+   self-energy contributions from Slavich.
 
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
