--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1206,12 +1206,12 @@ can be added very easily by...
 \section{Run-time comparison with other spectrum generators}
 
 We compare the run-time of the four different spectrum generators
-FlexibleSUSY (version 0.5.3), Softsusy (version 3.4.0), SPheno
+FlexibleSUSY (version 0.5.4), Softsusy (version 3.4.0), SPheno
 (3.2.4), SPhenoMSSM (generated with SARAH 4.1.0 and linked against
 SPheno 3.2.4).  FlexibleSUSY and Softsusy were compiled with g++ 4.8.0
-and gfortran 4.8.0.  SPheno and SPhenoMSSM were compiled with Intel
-ifort 13.1.3 20130607\footnote{We are using Intel's ifort compiler,
-  instead of gfortran 4.8.0, because it decreases the run-time of
+and Intel ifort 13.1.3 20130607.  SPheno and SPhenoMSSM were compiled
+with Intel ifort 13.1.3 20130607\footnote{We are using Intel's ifort
+  compiler, instead of gfortran, because it decreases the run-time of
   SPheno and SPhenoMSSM by approximately a factor $1.5$.}.  We're
 generating random CMSSM parameter points with $m_0\in [50,1000]$
 $m_{1/2}\in [50,1000]$, $\tan\beta\in [1,100]$, $\sign\mu\in
@@ -1293,25 +1293,26 @@ used, which has $6$ CPU cores.
                           & Intel Core2 Duo (P8600)    & Intel Core2 Duo (P8600)     & Intel Xeon (L5640)\\
                           & (1 core, $2.40\unit{GHz}$) & (2 cores, $2.40\unit{GHz}$) & (6 cores, $2.27\unit{GHz}$)\\
     \midrule
-    FlexibleSUSY 0.5.3    & $0.151\unit{s}$    & $0.114\unit{s}$   & $0.081\unit{s}$\\
-    Softsusy 3.4.0        & $0.178\unit{s}$    & $0.174\unit{s}$   & $0.157\unit{s}$\\
-    SPheno 3.2.4          & $0.120\unit{s}$    & $0.118\unit{s}$   & $0.108\unit{s}$\\
-    SPhenoMSSM 4.1.0${}^*$ & $0.463\unit{s}$    & $0.450\unit{s}$   & $0.403\unit{s}$\\
+    FlexibleSUSY 0.5.4    & $0.151\unit{s}$    & $0.114\unit{s}$   & $0.091\unit{s}$\\
+    Softsusy 3.4.0        & $0.174\unit{s}$    & $0.169\unit{s}$   & $0.162\unit{s}$\\
+    SPheno 3.2.4          & $0.119\unit{s}$    & $0.115\unit{s}$   & $0.108\unit{s}$\\
+    SPhenoMSSM 4.1.0${}^*$ & $0.416\unit{s}$    & $0.401\unit{s}$   & $0.366\unit{s}$\\
     \bottomrule
   \end{tabular}
   \caption{Average run-time for random CMSSM parameter points.
     FlexibleSUSY and Softsusy were compiled
-    with g++ 4.8.0 and gfortran 4.8.0.  SPheno and SPhenoMSSM were
+    with g++ 4.8.0 and ifort 13.1.3 20130607.
+    SPheno, SPhenoMSSM were
     compiled with ifort 13.1.3 20130607.
-    ${}^*$ SPhenoMSSM was generated with SARAH 4.1.0 and linked
+    ${}^*$SPhenoMSSM was generated with SARAH 4.1.0 and linked
     against SPheno 3.2.4.}
   \label{tab:run-time-comparison}
 \end{table}
 %
 We find that on the single-core machine SPheno is fastest with
-$0.120\unit{s}$, and FlexibleSUSY is second with $0.151\unit{s}$.  In
+$0.119\unit{s}$, and FlexibleSUSY is second with $0.151\unit{s}$.  In
 the case of 2 or 6 CPU cores, FlexibleSUSY is fastest with
-$0.114\unit{s}$ and $0.081\unit{s}$, respectively.  The reason is that
+$0.114\unit{s}$ and $0.091\unit{s}$, respectively.  The reason is that
 FlexibleSUSY calculates each pole mass in a separate thread, and
 therefore benefits from multi-core CPUs.
 
