--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,9 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Add stand-alone examples to illustrate how to use FlexibleSUSY's
    classes and libraries independently of FlexibleSUSY's build system.
 
+ * Add tower example to illustrate how to glue multiple models to form
+   a stack of effective field theories.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
