--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,10 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Implement leading two-loop MSSM and NMSSM CP-even and CP-odd Higgs
    self-energy contributions from Slavich.
 
+ * Allow to constrain the boundary condition scale via the model file
+   variables {Low,SUSY,High}ScaleMinimum and
+   {Low,SUSY,High}ScaleMaximum.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
