--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,10 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Bugfix (commit db60205): fixing linking error of
    test/test_MSSM_NMSSM_linking.x in case LoopTools is used.
 
+ * Bugfix (commit 32c3222): generalizing color summation routine to
+   handle single-generation fields and non-fundamental
+   representations.
+
  * Set minimum required SARAH version to 4.0.4, because it implements
    the full two-loop VEV beta functions from arXiv:1310.7629 .
 
