--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,9 @@ FlexibleSUSY-0.5.4 [not released yet]
    variables {Low,SUSY,High}ScaleMinimum and
    {Low,SUSY,High}ScaleMaximum.
 
+ * Allow explicite setting (and disabling) of the Yukawa couplings in
+   the constraints.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
