--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,8 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Allow explicite setting (and disabling) of the Yukawa couplings in
    the constraints.
 
+ * Enable/disable multi-threading at the configure level
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
