remove "Not yet implemented" remarks from the paper

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1205,7 +1205,7 @@ corrections can be added in a very simple way. For example in the MSSM
 by default \fs adds two-loop Higgs FORTRAN routines supplied by
 P.~Slavich from \cite{slavich-degrassi} to add two loop corrections of
 $\oatas$, $\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and
-$\oatab$ as follows... {\color{red} This is not yet implemented!}
+$\oatab$ as follows...
 
 Something similar is done for the NMSSM, but in this case the NMSSM
 $\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}, while for
@@ -1216,7 +1216,7 @@ measurement and the two loop corrections can be larger than the
 current experimental error \cite{Degrassi:2009yq} we recommend that
 the leading log two loop corrections are estimated, by generalising
 those of the MSSM or NMSSM, as has been done, for example, in the
-E$_6$SSM\cite{King:2005jy}.  {\color{red} This is not yet implemented!}
+E$_6$SSM\cite{King:2005jy}.
 
 Corrections to other masses or further corrections to the Higgs states
 can be added very easily by...
