add note about GUT normalization of the gauge couplings in FS

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -462,6 +462,12 @@ constraint name and \code{Input}).
   therefore do not need to be specified in the \code{LowScaleInput}
   variable.
 \end{itemize}
+%
+Note, that \fs GUT-normalizes all gauge couplings.  Thus, the
+high-scale definition takes the simple form \code{g1 == g2}.  Another
+consequence is that in the calculation of the VEVs $v_u$ and $v_d$
+from $M_Z$ and $\tan\beta$ at the low-scale the GUT-normalization has
+to be taken into account, see above.
 
 Finally the user can set an initial guess for the model parameters at
 the low- and high-scale using the variables
