--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -430,7 +430,7 @@ Using the the variable \code{EWSBOutputParameters} the user can
 specify the model parameters that are output of the electroweak
 symmetry breaking conditions.  When doing EWSB, \fs will adjust these
 parameters until the EWSB conditons are fulfilled.  In the CMSSM these
-are \code{Mu} and \code{B[\[Mu]]}.
+are \code{\\[Mu]} and \code{B[\\[Mu]]}.
 
 Furthermore, the user has to specify the form of three model
 constraints: low-scale, susy-scale and high-scale constraints.  In \fs
@@ -481,7 +481,7 @@ tadpoles and self-energies.  For MSSM-like models (with two CP-even
 Higgs bosons, one CP-odd Higgs boson, one neutral Goldstone boson)
 these corrections can be enabled by setting \code{UseHiggs2LoopMSSM =
   True;} in the model file and by defining the effectiv $\mu$-term
-\code{EffectiveMu = \[Mu]}.  This will add the zero-momentum
+\code{EffectiveMu = \\[Mu]}.  This will add the zero-momentum
 corrections of the order $O(y_t^4 + y_b^2 y_t^2 + y_b^4)$, $O(y_t^2
 g_3^2)$, $O(y_b^2 g_3^2)$, $O(y_\tau^4)$, $O(y_\tau^2 y_b^2)$ from
 \cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}.
