--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -488,7 +488,7 @@ g_3^2)$, $O(y_b^2 g_3^2)$, $O(y_\tau^4)$, $O(y_\tau^2 y_b^2)$ from
 For NMSSM-like models (with three CP-even Higgs bosons, two CP-odd
 Higgs bosons, one neutral Goldstone boson) the two-loop contributions
 are enabled by setting \code{UseHiggs2LoopNMSSM = True;} and by
-defining the effectiv $\mu$-term like \code{EffectiveMu = \[Lambda] vS
+defining the effectiv $\mu$-term like \code{EffectiveMu = \\[Lambda] vS
   / Sqrt[2]}, for example.  This will add the the zero-momentum
 corrections of the order $O(y_t^2 g_3^2)$, $O(y_b^2 g_3^2)$ from
 \cite{Degrassi:2009yq}, plus leading MSSM-like contributions of the
