--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@ FlexibleSUSY-0.5.4 [not released yet]
 
  * Enable/disable multi-threading at the configure level
 
+ * lower required g++ version to 4.4.7
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
