--- a/README
+++ b/README
@@ -1,5 +1,15 @@
+FlexibleSUSY
+============
+
 FlexibleSUSY provides Mathematica and C++ code to create spectrum
-generators for non-minimal supersymmetric models.
+generators for non-minimal supersymmetric models.  It is designed for
+generating fast and modular C++ code, allowing for easy modification,
+extension and reuse.
+
+Homepage:                https://flexiblesusy.hepforge.org
+Mailing list:            flexiblesusy@projects.hepforge.org
+Source code repository:  https://github.com/FlexibleSUSY
+Bug reports:             https://github.com/FlexibleSUSY/FlexibleSUSY/issues
 
 
 Requirements
